--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -554,6 +554,12 @@
         </intent-filter>
     </receiver>
 
+    <receiver android:name=".service.LocalBackupListener">
+        <intent-filter>
+            <action android:name="android.intent.action.BOOT_COMPLETED" />
+        </intent-filter>
+    </receiver>
+
     <receiver android:name=".service.PersistentConnectionBootListener">
         <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED"/>
