--- a/build.gradle
+++ b/build.gradle
@@ -120,6 +120,10 @@ dependencies {
     compile 'com.codewaves.stickyheadergrid:stickyheadergrid:0.9.4'
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3-S2'
     compile 'net.zetetic:android-database-sqlcipher:3.5.9'
+    compile ('com.googlecode.ez-vcard:ez-vcard:0.9.11') {
+        exclude group: 'com.fasterxml.jackson.core'
+        exclude group: 'org.freemarker'
+    }
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:1.7.1'
@@ -306,6 +310,7 @@ android {
                           'proguard-klinker.pro',
                           'proguard-retrolambda.pro',
                           'proguard-okhttp.pro',
+                          'proguard-ez-vcard.pro',
                           'proguard.cfg'
             testProguardFiles 'proguard-automation.pro',
                           'proguard.cfg'
