Improve the image editor.
A variety of improvements to the image editor, such as:

- New, fullscreen styling
- Smoother lines
- Better text and sticker handling
- Improved color picker with a history pallette
- New highlighter tool

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -375,7 +375,7 @@
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
     <activity android:name=".scribbles.ScribbleActivity"
-              android:theme="@style/TextSecure.LightNoActionBar"
+              android:theme="@style/TextSecure.ScribbleTheme"
               android:windowSoftInputMode="stateHidden"
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
