Fix disappearing message corner case.
We never properly registered the ExpirationListener, meaning we were
relying on the wait-notify loop of ExpirationManager to delete things.
This normally works, but fails when your phone goes to sleep. So I
properly registered the receiver, and then added a failsafe to re-run
the ExpirationManager if we're about to render an expired message.

Fixes #7906

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -526,6 +526,8 @@
         </intent-filter>
     </receiver>
 
+    <receiver android:name=".service.ExpirationListener" />
+
 
     <provider android:name=".providers.PartProvider"
               android:grantUriPermissions="true"
