Keep retrying message sends for 24 hours.
Previously, we retried based on a count. Now we've added the ability to
keep retrying for a specified time, using exponential backoff to
throttle attempts.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -528,6 +528,7 @@
 
     <receiver android:name=".service.ExpirationListener" />
 
+    <receiver android:name=".jobmanager.requirements.BackoffReceiver" />
 
     <provider android:name=".providers.PartProvider"
               android:grantUriPermissions="true"
