Add notification channel support.
Bucket our notifications into channels. Required to target API 26.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -577,6 +577,12 @@
         </intent-filter>
     </receiver>
 
+    <receiver android:name=".notifications.LocaleChangedReceiver">
+        <intent-filter>
+            <action android:name="android.intent.action.LOCALE_CHANGED"/>
+        </intent-filter>
+    </receiver>
+
     <receiver android:name=".notifications.MessageNotifier$ReminderReceiver">
         <intent-filter>
             <action android:name="org.thoughtcrime.securesms.MessageNotifier.REMINDER_ACTION"/>
