--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -278,6 +278,11 @@
               android:windowSoftInputMode="stateHidden"
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
+        <activity android:name=".mediasend.MediaSendActivity"
+                  android:theme="@style/TextSecure.LightNoActionBar"
+                  android:windowSoftInputMode="stateHidden"
+                  android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
+
     <activity android:name=".PassphraseChangeActivity"
               android:label="@string/AndroidManifest__change_passphrase"
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
