Fixed build issues caused by Google jcenter fiasco.
Google removed a bunch of binaries from jcenter that they shouldn't
have, breaking everyone's builds. So now we have manually add repos for
the missing binaries in the meantime.

--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ repositories {
     maven { // textdrawable
         url 'https://dl.bintray.com/amulyakhare/maven'
     }
+    maven {
+        url 'https://dl.bintray.com/google/flexbox-layout/'
+    }
     google()
     jcenter()
     mavenLocal()
